
	* config.c: allow support options to be prefixed with '+'
	  to override the valaue previous set only if it is less strict
	  ok and +warning => ok, warning and +ok => ok
	* parser.y (terminator_warning, terminator_error): don't warn/error
	  for missing terminators that don't exist in the current dialect

2017-06-24  Ron Norman <rjn@inglenet.com>

	* field.c,tree.h: Fixed to carry USAGE, SYNC, SIGN LEADING/TRAILING
	  attributes from group item to elementary data field
	  Fixed SYNC so it aligns the same as Micro Focus on 2 or 4 byte
	  boundary only.

2017-06-22  Ron Norman <rjn@inglenet.com>

	* codgen.c: emit dummy reference to 'frame_overflow' to avoid
	  C compiler warnings

2017-06-22  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, cobc.h, config.def, config.c, reserved.c: replaced
	  "specify-all-reserved" (cb_specify_all_reserved) by
	  "reserved-words" (cb_reserved_words)
	* cobc.c (process_command_line): process -std= and -conf= even when
	  specified after --list-reserved

2017-06-20  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Added CALL cross reference functions.
	* tree.h: Added CALL cross reference structures.
	* typeck.c: Added CALL cross reference calls.

2017-06-16  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	* cobc.c, codegen.c, codeoptim.c, error.c, field.c, pplex.l, tree.c
	  typeck.c: surrounded exception ABORTs that cannot be tested by LCOV_EXCP
	  markers

2017-06-16  Dave Pitts <dpitts@cozx.com>

	* cobc.c (reflow_replaced_fixed_format_text): listings: Fixed multiple
	  line output.

2017-06-13  Dave Pitts <dpitts@cozx.com>

	* cobc.c (get_next_token): listings: Keep string as a single token.

2017-06-13  Ron Norman <rjn@inglenet.com>

	* typeck.c: #306 check for misplaced operators and report error

2017-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* config.def: renamed "debugging-line" option (cb_debugging_line)